force-app/main/default/objects/Inventory_Transaction__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used to approved the Object</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>