force-app/main/default/objects/Inventory_Transaction__c/fields/Is_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Is_Damaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used to find the product is good or bad</description>
    <label>Is Damaged</label>
    <type>Checkbox</type>
</CustomField>