force-app/main/default/objects/Inventory_Transaction__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It is used track the approval</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>