force-app/main/default/objects/Inventory_Transaction__c/validationRules/TRA0001_Validate_Transaction_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>TRA0001_Validate_Transaction_Type</fullName>
    <active>true</active>
    <description>It is used to ensure the product field is not empty when the Transaction type is &quot;Sale&quot;</description>
    <errorConditionFormula>ISCHANGED(Transaction_Type__c) &amp;&amp;
ISPICKVAL(Transaction_Type__c, &quot;Sale&quot;) &amp;&amp;
ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>When the Transaction type is Sales, Product field is required</errorMessage>
</ValidationRule>