force-app/main/default/objects/Inventory_Transaction__c/validationRules/TRA0002_Validate_Supplier_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>TRA0002_Validate_Supplier_Cost</fullName>
    <active>true</active>
    <description>It is used to validate that if transaction type is Purchase, then Supplier and Unit cost is reqired.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL( Transaction_Type__c , &quot;Purchase&quot;) &amp;&amp;   OR(ISBLANK( Supplier__c ) ,ISBLANK( Unit_Cost__c ))</errorConditionFormula>
    <errorMessage>When the transaction type is Purchase, the both Supplier and Unit Cost is required</errorMessage>
</ValidationRule>